# Scene-Builder

./: .gitignore  LICENSE  README.md  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
examples/: example_input.json  example_output.json
src/: main.py
src/app/agents/: pipeline.py
src/app/api/v1/: scene.py
src/app/core/: schema.py
tests/: test_pipeline.py  test_schema.py
